--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         submit: "Send",
         empty: "You didn’t write anything 🙃",
         answers: [
-          "Let it go... it’ll pass 🍃",
+          "We screwed up this shit",
 
         ]
       }
@@ -132,4 +132,5 @@
   </script>
 </body>
 </html>
+
 
